sbin_PROGRAMS = bounced
bounced_SOURCES = admin.c bounced.c bounced.h channel.c client.c config.c \
                  connection.c \
                  dbaccess.c dmemory.c dmemory.h log.c md5.c md5.h mode.c \
                  motd.c names.c \
                  nick.c \
                  password.c \
                  ping.c privmsg.c profile.c quit.c \
                  server.c timer.c timer.h tools.c topic.c \
                  user.c list.h hash.h \
                  hashlist.h
INCLUDES=-DCONFIGDIR=\"@CONFIGDIR@\" 
EXTRA_DIST = bounced.dsw bounced.dsp

